@@ -1,5 +1,6 @@
 h1. TODOs / ideas for next releases
 
+* use "GMongo":http://blog.paulopoiati.com/2010/06/20/gmongo-0-5-released/ as driver wrapper
 * check out "GORM Redis":http://grails.org/plugin/redis plugin and the "inconsequential":http://github.com/grails/inconsequential implementation and derive some best practices
 * add WriteConcern to methods, where applicable
 * move config to dataSources, throw exception that tells to move config for upgraders. Create "Configuration" documentation
@@ -7,6 +8,7 @@ h1. TODOs / ideas for next releases
 * add option to drop database on startup (dbCreate = "create-drop" // one of 'create', 'create-drop','update' see http://grails.org/doc/1.3.x/guide/3.%20Configuration.html#3.3%20The%20DataSource)
 * map Datastore methods onto Domain classes (as static and instance methods) - updateFirst, findAndUpdate
 * Add test for index definition syntax
+* document converter abilities
 * save method: add support for failOnError:true in grails 1.2 (GRAILS-4343)
 * no ast transformation for abstract classes. find a way to mark classes that should not be transformed
 * implement GridFS access
