@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Thu Aug 12 18:06:52 CEST 2010
-app.grails.version=1.3.4
+#Fri Nov 26 12:54:03 CET 2010
+app.grails.version=1.3.5
 app.name=gorm-mongodb
-app.version=0.5.1
-plugins.tomcat=1.3.4
+app.version=0.5.2
+plugins.tomcat=1.3.5
