@@ -2,10 +2,9 @@ package org.acme
 
 import com.google.code.morphia.annotations.Reference
 import org.bson.types.ObjectId
+import com.google.code.morphia.annotations.Entity
 
 class Project {
-
-  ObjectId id // for autogenerated ids
 
   String name = "You forgot to give me a name"
   Date startDate
@@ -20,6 +19,9 @@ class Project {
   @Reference
   Contact manager
 
+  @Reference
+  List<Contact> teammembers
+
   transient String pass = "pass"
 
   static constraints = {
@@ -29,6 +31,7 @@ class Project {
     frequency nullable: true
     manager nullable: true
     mainTask nullable: true
+    teammembers nullable: true
   }
 
   public String toString ( ) {
