@@ -3,6 +3,8 @@ package grails.plugins.mongodb;
 import com.google.code.morphia.Datastore;
 import com.google.code.morphia.DatastoreImpl;
 import com.google.code.morphia.Morphia;
+import com.google.code.morphia.logging.MorphiaLoggerFactory;
+import com.google.code.morphia.logging.slf4j.SLF4JLoggerImplFactory;
 import com.mongodb.DB;
 import com.mongodb.DBCollection;
 import com.mongodb.Mongo;
@@ -42,6 +44,10 @@ public class MongoHolderBean {
 
     morphia = new Morphia();
     datastore = (DatastoreImpl)morphia.createDatastore(new Mongo(host, port), database);
+
+    // register with logger - must be done before initialization of loggin system
+    // @todo fix me
+//    MorphiaLoggerFactory.registerLogger(SLF4JLoggerImplFactory.class);
   }
 
   private String getConfigVar(Map config, String key, String defaultValue) {
