@@ -1,6 +1,15 @@
 h2. Change Log
 
-Also see the "release notes of underlying morphia library":http://code.google.com/p/morphia/wiki/ReleaseNotes
+Also see the "release notes of underlying morphia library":http://code.google.com/p/morphia/wiki/ReleaseNotes and the GORM-MongoDB "User Guide":http://jkuehn.github.com/gorm-mongodb/
+
+h3. v0.6 - upcoming
+* morphia now uses grails logger *TODO* http://code.google.com/p/morphia/wiki/SLF4JExtension
+
+h3. v0.5.2 - 2010-11-
+* updated morphia library to *0.96*
+* added static collection property to access the unterlying mongodb collection
+* added addTo* methods support  
+* by default the classname is not stored for every document anymore. Add annotation @com.google.code.morphia.annotations.Entity(noClassnameStored=false) to enable manually
 
 h3. v0.5.1 - 2010-10-03
 * added static update method
